<resources>
    <string name="about">About</string>
    <string name="about_paragraph1">BRaVeN is an application where you can post anything and what you like in our forum. You can reply others forum too. It is a quite simple application that you can enjoy.</string>
    <string name="about_paragraph2">With BRaVeN, you can make a friend with anyone, comment in their post, like their activity, follow your friends, and search post that you like.</string>
    <string name="about_paragraph3">Made with ❤\nby\nVincent Benedict VN20–2\nand\nBrandon Julio Thenaro BR20–2.</string>
    <string name="about_paragraph4">🚀 Powered by Android, Kotlin, and Firebase.</string>
    <string name="account">Account</string>
    <string name="advanced_filter">Advanced Filter</string>
    <string name="app_name">BRaVeN</string>
    <string name="biography">Biography</string>
    <string name="body">Body</string>
    <string name="category">Category</string>
    <string name="click_here_to_upload_your_profile_picture">Click here to upload your Profile Picture...</string>
    <string name="comment">Write Comment</string>
    <string name="comment_as">Comment as %s</string>
    <string name="comment_in_a_week">Comment in a Week</string>
    <string name="comments">Comments</string>
    <string name="create">Create</string>
    <string name="created_at">Created At</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="date_of_birth_not_specified">Date of birth not specified</string>
    <string name="delete">Delete</string>
    <string name="description">Description</string>
    <string name="display_name">Display Name</string>
    <string name="edit_post">Edit Post</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="email">Email</string>
    <string name="enable_dark_mode_switch">Enable Dark Mode</string>
    <string name="end_date">End Date</string>
    <string name="explore">Explore</string>
    <string name="follow">Follow</string>
    <string name="follow_in_a_week">Follow in a Week</string>
    <string name="followers">Followers</string>
    <string name="followers_count">%d\nFollowers</string>
    <string name="followings_count">%d\nFollowings</string>
    <string name="home">Home</string>
    <string name="like_in_a_week">Likes in a Week</string>
    <string name="likes">Likes</string>
    <string name="login">Login</string>
    <string name="logout">Logout</string>
    <string name="most_comments">Most Comments</string>
    <string name="most_likes">Most Likes</string>
    <string name="my_statistics">My Statistics</string>
    <string name="no_followers_text">No Followers</string>
    <string name="no_followings_text">No Followings</string>
    <string name="notification">Notification</string>
    <string name="password">Password</string>
    <string name="personal_data">%s (%s) • %s</string>
    <string name="post_categories">Post Categories</string>
    <string name="post_category">Post Category</string>
    <string name="post_comment">Add</string>
    <string name="post_create">Create Post</string>
    <string name="post_detail">Post Detail</string>
    <string name="post_edit">Post Edit</string>
    <string name="poster_information">%s • %s</string>
    <string name="posts_count">%d\nPosts</string>
    <string name="posts_in_a_month">Posts in a Month</string>
    <string name="posts_in_a_year">Posts in a Year</string>
    <string name="preview_image">Preview Image</string>
    <string name="profile_picture">Profile Picture</string>
    <string name="recent_likes">Recent Likes</string>
    <string name="recent_posts">Recent Posts</string>
    <string name="search">Search</string>
    <string name="setting">Setting</string>
    <string name="start_date">Start Date</string>
    <string name="submit">Submit</string>
    <string name="thumbnail">Thumbnail</string>
    <string name="title">Title</string>
    <string name="title_about">About</string>
    <string name="unfollow">Unfollow</string>
    <string name="update">Update</string>
    <string name="update_page_button">Update</string>
    <string name="update_profile_picture">Update Profile Picture</string>
    <string name="upload">Upload</string>
    <string name="upload_image_edit">Upload Image</string>
    <string name="upload_thumbnail">Upload Thumbnail</string>
    <string name="user_profile">User Profile</string>
    <string name="user_statistics">User Statistics</string>
    <string name="username">Username</string>
    <string name="zero">0</string>
    <string name="empty">Empty</string>
    <string name="large_text">Large Text</string>
    <string name="comment_text">%s Commented on Your Post !</string>
    <string name="follow_text">%s Started Following You !</string>
    <string name="like_text">%s Liked Your Post !</string>
    <string name="dislike_text">%s Disliked Your Post !</string>
    <string name="title_post">Post Title : %s</string>
    <string name="following">Following</string>
    <string name="followings">Follow</string>
    <string name="save">Save</string>
    <string name="click_save">Click here to Save it...</string>
    <string name="validator_username">Username must not be empty</string>
    <string name="validator_title">Title must not be empty</string>
    <string name="validator_description">Description must not be empty</string>
    <string name="validator_category">Category must not be empty</string>
    <string name="validator_ok">ok</string>
    <string name="post_unliked">Post un-liked</string>
    <string name="post_liked">Post liked</string>
    <string name="post_undisliked">Post un-disliked</string>
    <string name="post_disliked">Post disliked</string>
    <string name="sb_profile_selected">Profile Picture Selected</string>
    <string name="sb_profile_updated">Profile updated!</string>
    <string name="sb_user_followed">User Followed !</string>
    <string name="sb_user_unfollowed">User Un-followed !</string>
    <string name="sb_thumbnail_selected">Thumbnail selected !</string>
    <string name="sb_post_updated">Post Updated !</string>
    <string name="sb_comment_posted">Comment Posted !</string>
    <string name="sb_post_created">Post Created !</string>
    <string name="no_posts">No Posts</string>
    <plurals name="fui_error_weak_password" translation_description="Inline error for weak password">
        <item quantity="one" translation_description="Inline error for weak password">Password not strong enough. Use at least %1$d character.</item>
        <item quantity="other" translation_description="Inline error for weak password">Password not strong enough. Use at least %1$d characters.</item>
    </plurals>
    <string name="fui_sign_in_with_google" translation_description="Sign in button text">Sign in with Google</string>
    <string name="fui_sign_in_with_email" translation_description="Sign in button text">Sign in with email</string>
    <string name="fui_sign_in_default" translation_description="Button text to sign in">Sign in</string>
</resources>