<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/loginFragment">

    <fragment
        android:id="@+id/loginFragment"
        android:name="edu.bluejack20_2.braven.fragments.LoginFragment"
        android:label="@string/login"
        tools:layout="@layout/fragment_login" />
    <action
        android:id="@+id/toLogin"
        app:destination="@id/loginFragment"
        app:popUpTo="@id/nav_graph"
        app:popUpToInclusive="true" />
    <fragment
        android:id="@+id/homeFragment"
        android:name="edu.bluejack20_2.braven.pages.home.HomeFragment"
        android:label="@string/home"
        tools:layout="@layout/fragment_home">
        <action
            android:id="@+id/toCreatePost"
            app:destination="@id/createPostFragment" />
    </fragment>
    <action
        android:id="@+id/toHome"
        app:destination="@id/homeFragment"
        app:popUpTo="@id/nav_graph"
        app:popUpToInclusive="true" />
    <fragment
        android:id="@+id/Expl"
        android:name="edu.bluejack20_2.braven.fragments.AccountFragment"
        android:label="@string/account"
        tools:layout="@layout/fragment_account" />
    <fragment
        android:id="@+id/accountFragment"
        android:name="edu.bluejack20_2.braven.fragments.AccountFragment"
        android:label="@string/account"
        tools:layout="@layout/fragment_account" />
    <fragment
        android:id="@+id/aboutFragment"
        android:name="edu.bluejack20_2.braven.fragments.AboutFragment"
        android:label="@string/about"
        tools:layout="@layout/fragment_about" />
    <fragment
        android:id="@+id/settingFragment"
        android:name="edu.bluejack20_2.braven.fragments.SettingFragment"
        android:label="@string/setting"
        tools:layout="@layout/fragment_setting" />
    <fragment
        android:id="@+id/createPostFragment"
        android:name="edu.bluejack20_2.braven.pages.create_post.CreatePostFragment"
        android:label="@string/create_post"
        tools:layout="@layout/fragment_create_post" />
    <fragment
        android:id="@+id/exploreFragment"
        android:name="edu.bluejack20_2.braven.ExploreFragment"
        android:label="fragment_explore"
        tools:layout="@layout/fragment_explore" />
</navigation>