<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_marginVertical="4dp"
    android:layout_height="wrap_content">

    <ImageView
        android:id="@+id/poster_profile_picture"
        android:layout_width="64dp"
        android:layout_height="0dp"
        android:layout_marginHorizontal="8dp"
        android:layout_marginVertical="8dp"
        android:contentDescription="@string/profile_picture"
        android:scaleType="fitStart"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/poster_display_name"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo" />

    <TextView
        android:id="@+id/poster_display_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:text="@string/display_name"
        android:textAppearance="?attr/textAppearanceSubtitle2"
        app:layout_constraintLeft_toRightOf="@+id/poster_profile_picture"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@+id/poster_profile_picture" />

    <TextView
        android:id="@+id/timestamp"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/created_at"
        android:textAppearance="?attr/textAppearanceCaption"
        app:layout_constraintLeft_toLeftOf="@+id/poster_display_name"
        app:layout_constraintRight_toRightOf="@+id/poster_display_name"
        app:layout_constraintTop_toBottomOf="@+id/poster_display_name" />

    <TextView
        android:id="@+id/body"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/body"
        android:textAppearance="?attr/textAppearanceBody1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="@+id/timestamp"
        app:layout_constraintRight_toRightOf="@+id/timestamp"
        app:layout_constraintTop_toBottomOf="@+id/timestamp" />
</androidx.constraintlayout.widget.ConstraintLayout>