<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".pages.user_profile.UserProfileFragment">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/profile_picture"
                android:layout_width="64dp"
                android:layout_height="64dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:contentDescription="@string/profile_picture"
                android:src="@drawable/ic_baseline_account_circle_24"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/posts_count"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/posts_count"
                android:textAppearance="?attr/textAppearanceBody2"
                app:layout_constraintBottom_toBottomOf="@+id/profile_picture"
                app:layout_constraintEnd_toStartOf="@+id/followers_count"
                app:layout_constraintStart_toEndOf="@+id/profile_picture"
                app:layout_constraintTop_toTopOf="@+id/profile_picture" />

            <TextView
                android:id="@+id/followers_count"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/followers_count"
                android:textAppearance="?attr/textAppearanceBody2"
                app:layout_constraintBottom_toBottomOf="@+id/posts_count"
                app:layout_constraintEnd_toStartOf="@+id/followings_count"
                app:layout_constraintStart_toEndOf="@+id/posts_count"
                app:layout_constraintTop_toTopOf="@+id/posts_count" />

            <TextView
                android:id="@+id/followings_count"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:gravity="center"
                android:text="@string/followings_count"
                android:textAppearance="?attr/textAppearanceBody2"
                app:layout_constraintBottom_toBottomOf="@+id/followers_count"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/followers_count"
                app:layout_constraintTop_toTopOf="@+id/followers_count" />

            <TextView
                android:id="@+id/display_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:text="@string/display_name"
                android:textAppearance="?attr/textAppearanceHeadline6"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/profile_picture"
                app:layout_constraintTop_toBottomOf="@+id/profile_picture" />

            <TextView
                android:id="@+id/personal_data"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/personal_data"
                android:textAppearance="?attr/textAppearanceCaption"
                app:layout_constraintEnd_toEndOf="@+id/display_name"
                app:layout_constraintStart_toStartOf="@+id/display_name"
                app:layout_constraintTop_toBottomOf="@+id/display_name" />

            <Button
                android:id="@+id/action"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/follow"
                app:layout_constraintEnd_toEndOf="@+id/personal_data"
                app:layout_constraintStart_toStartOf="@+id/personal_data"
                app:layout_constraintTop_toBottomOf="@+id/personal_data" />

            <androidx.viewpager2.widget.ViewPager2
                android:id="@+id/view_pager"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/action"
                app:layout_constraintStart_toStartOf="@+id/action"
                app:layout_constraintTop_toBottomOf="@+id/action" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </FrameLayout>
</ScrollView>
