<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".pages.post_detail.PostDetailFragment">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/poster_profile_picture"
                android:layout_width="37dp"
                android:layout_height="37dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:contentDescription="@string/profile_picture"
                app:civ_border_color="#C1C1C1"
                app:civ_border_width="0.5dp"
                app:layout_constraintEnd_toStartOf="@+id/poster_information"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/title"
                app:srcCompat="@drawable/ic_baseline_account_circle_24" />

            <TextView
                android:id="@+id/poster_information"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="8dp"
                android:text="@string/poster_information"
                android:textAppearance="?attr/textAppearanceCaption"
                app:layout_constraintEnd_toStartOf="@+id/edit_post"
                app:layout_constraintStart_toEndOf="@+id/poster_profile_picture"
                app:layout_constraintTop_toTopOf="@+id/poster_profile_picture" />

            <ImageButton
                android:id="@+id/edit_post"
                style="@style/Widget.MaterialComponents.Button"
                android:layout_width="60dp"
                android:layout_height="53dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:contentDescription="@string/edit_post"
                android:src="@drawable/ic_baseline_edit_24"
                android:visibility="invisible"
                app:layout_constraintBottom_toBottomOf="@+id/category"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/poster_information"
                app:layout_constraintTop_toTopOf="@+id/poster_information" />

            <TextView
                android:id="@+id/title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:background="@drawable/textlines"
                android:paddingLeft="5dp"
                android:paddingTop="5dp"
                android:paddingRight="5dp"
                android:paddingBottom="5dp"
                android:text="@string/title"
                android:textAppearance="@style/TextAppearance.BRaVeN.Headline6"
                app:layout_constraintEnd_toEndOf="@+id/edit_post"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/poster_profile_picture"
                app:layout_constraintTop_toBottomOf="@+id/thumbnail" />

            <TextView
                android:id="@+id/category"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/category"
                android:textAppearance="?attr/textAppearanceCaption"
                app:layout_constraintEnd_toEndOf="@+id/poster_information"
                app:layout_constraintStart_toStartOf="@+id/poster_information"
                app:layout_constraintTop_toBottomOf="@+id/poster_information" />

            <TextView
                android:id="@+id/description"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/description"
                android:textAppearance="?attr/textAppearanceBody1"
                app:layout_constraintEnd_toEndOf="@+id/edit_post"
                app:layout_constraintStart_toStartOf="@+id/poster_profile_picture"
                app:layout_constraintTop_toBottomOf="@+id/category" />

            <ImageView
                android:id="@+id/thumbnail"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:contentDescription="@string/thumbnail"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.button.MaterialButtonToggleGroup
                android:id="@+id/like_dislike_buttons_group"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="56dp"
                app:layout_constraintEnd_toEndOf="@id/thumbnail"
                app:layout_constraintStart_toStartOf="@id/thumbnail"
                app:layout_constraintTop_toBottomOf="@+id/description"
                app:singleSelection="true">

                <Button
                    android:id="@+id/like"
                    style="?attr/materialButtonOutlinedStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/zero"
                    android:textColor="@color/secondary2"
                    app:icon="@drawable/ic_baseline_thumb_up_24"
                    app:iconTint="@color/secondary2" />

                <Button
                    android:id="@+id/dislike"
                    style="?attr/materialButtonOutlinedStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/zero"
                    android:textColor="@color/dislikeButton"
                    app:icon="@drawable/ic_baseline_thumb_down_24"
                    app:iconTint="@color/dislikeButton" />
            </com.google.android.material.button.MaterialButtonToggleGroup>

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/poster_profile_picture_comment"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginStart="16dp"
                android:contentDescription="@string/profile_picture"
                app:civ_border_color="#C1C1C1"
                app:civ_border_width="0.5dp"
                app:layout_constraintBottom_toBottomOf="@+id/comment_layout"
                app:layout_constraintEnd_toStartOf="@+id/poster_information"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/comment_as"
                app:srcCompat="@drawable/ic_baseline_account_circle_24" />

            <TextView
                android:id="@+id/comment_as"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:text="@string/comment_as"
                android:textAppearance="?attr/textAppearanceCaption"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/like_dislike_buttons_group" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/comment_layout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="0dp"
                android:layout_height="63dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="4dp"
                android:layout_marginEnd="16dp"
                android:hint="@string/comment"
                app:boxCornerRadiusBottomEnd="30dp"
                app:boxCornerRadiusBottomStart="30dp"
                app:boxCornerRadiusTopEnd="30dp"
                app:boxCornerRadiusTopStart="30dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/poster_profile_picture_comment"
                app:layout_constraintTop_toBottomOf="@+id/comment_as">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/comment"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="top"
                    android:minLines="2" />

            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/post_comment"
                style="@style/following_button"
                android:layout_width="0dp"
                android:layout_height="41dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:text="@string/post_comment"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/comment_layout" />

            <TextView
                android:id="@+id/comments_label"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:text="@string/comments"
                android:textAppearance="?attr/textAppearanceHeadline6"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/post_comment" />

            <View
                android:id="@+id/comment_horizontal_divider"
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:background="?android:attr/listDivider"
                app:layout_constraintEnd_toEndOf="@+id/comments_label"
                app:layout_constraintStart_toStartOf="@+id/comments_label"
                app:layout_constraintTop_toBottomOf="@+id/comments_label" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/comments"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="16dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/comment_horizontal_divider" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </FrameLayout>
</androidx.core.widget.NestedScrollView>
